system/kube-api-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/enabled: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host k8s.danger250.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes
                port:
                  number: 6443
  tls:
    - hosts:
        - *host
      secretName: k8s-tls-certificate
